--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "vite": "^4.4.5"
   },
   "publishConfig": {
-    "@juans:registry": "https://npm.pkg.github.com"
+    "@juansgarbi:registry": "https://npm.pkg.github.com"
   },
   "description": "This template should help get you started developing with Vue 3 in Vite. The template uses Vue 3 `<script setup>` SFCs, check out the [script setup docs](https://v3.vuejs.org/api/sfc-script-setup.html#sfc-script-setup) to learn more.",
   "main": "./src/main.js",
